--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -135,17 +135,17 @@
               			<div class="payment-box">
 
  
-                          {% if settings.show_visa_f %}<div class="payment-icon margin-l"><img data-src="{{ 'VISA 12.svg' | asset_url }}" width="50" height="25" viewBox="0 0 50 25"class="fluid-i lazyload" alt="Visa" /></div>{% endif %}
+                          {% if settings.show_visa_f %}<div class="payment-icon margin-l"><img data-src="{{ 'visa.svg' | asset_url }}" width="50" height="25" viewBox="0 0 50 25"class="fluid-i lazyload" alt="Visa" /></div>{% endif %}
                            {% if settings.show_diners_f %} <div class="payment-icon margin--1"><img data-src="{{ 'DINNERS 12.svg' | asset_url }}" style="max-height: 32px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="Dinners" /></div>{% endif %}
-                           {% if settings.show_master_f %} <div class="payment-icon margin--1"><img data-src="{{ 'MASTERCARD 12.svg' | asset_url }}" width="50" height="25" class="fluid-i lazyload" alt="MasterCard" /></div>{% endif %}
-                            {% if settings.show_hiper_f %}<div class="payment-icon margin--1"><img data-src="{{ 'HIPERCARD 12.svg' | asset_url }}"  width="50" height="25" class="fluid-i lazyload" alt="Hipercard" /></div>{% endif %}
-                          	{% if settings.show_Aura_f %}<div class="payment-icon margin--1"><img data-src="{{ 'AURA 12.svg' | asset_url }}"  width="55" height="20" class="fluid-i lazyload" alt="Auracard" /></div>{% endif %}
+                           {% if settings.show_master_f %} <div class="payment-icon margin--1"><img data-src="{{ 'mastercard.svg' | asset_url }}" width="50" height="25" class="fluid-i lazyload" alt="MasterCard" /></div>{% endif %}
+                            {% if settings.show_hiper_f %}<div class="payment-icon margin--1"><img data-src="{{ 'hipercard.svg' | asset_url }}"  width="50" height="25" class="fluid-i lazyload" alt="Hipercard" /></div>{% endif %}
+                          	{% if settings.show_Aura_f %}<div class="payment-icon margin--1"><img data-src="{{ 'aura.svg' | asset_url }}"  width="55" height="20" class="fluid-i lazyload" alt="Auracard" /></div>{% endif %}
                        
-                            {% if settings.show_elo_f %}<div class="payment-icon margin-l"><img data-src="{{ 'ELO 12.svg' | asset_url }}"  width="50" height="25" class="fluid-i lazyload" alt="Elo" /></div>{% endif %}
-                           {% if settings.show_amex_f %} <div class="payment-icon margin--1"><img data-src="{{ 'AMEX 12.svg' | asset_url }}" style="max-height: 32px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="American Express" /></div>{% endif %}
-                          	{% if settings.show_discover_f %}<div class="payment-icon margin--1"><img data-src="{{ 'DISCOVER 12.svg' | asset_url }}"  style="min-width: 56px;margin-top: -0.04rem;" width="50" height="25" class="fluid-i lazyload" alt="Discovercard" /></div>{% endif %}
-                            {% if settings.show_boleto_f %}<div class="payment-icon margin--1"><img data-src="{{ 'BOLETO 12.svg' | asset_url }}"  style="max-height: 33px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="Boleto" /></div>{% endif %}
-                            {% if settings.show_pix_f %}<div class="payment-icon margin--1"><img data-src="{{ 'PIX 12.svg' | asset_url }}"  style="max-height: 34px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="Pix" /></div>{% endif %}
+                            {% if settings.show_elo_f %}<div class="payment-icon margin-l"><img data-src="{{ 'elo.svg' | asset_url }}"  width="50" height="25" class="fluid-i lazyload" alt="Elo" /></div>{% endif %}
+                           {% if settings.show_amex_f %} <div class="payment-icon margin--1"><img data-src="{{ 'amex.svg' | asset_url }}" style="max-height: 32px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="American Express" /></div>{% endif %}
+                          	{% if settings.show_discover_f %}<div class="payment-icon margin--1"><img data-src="{{ 'discover.svg' | asset_url }}"  style="min-width: 56px;margin-top: -0.04rem;" width="50" height="25" class="fluid-i lazyload" alt="Discovercard" /></div>{% endif %}
+                            {% if settings.show_boleto_f %}<div class="payment-icon margin--1"><img data-src="{{ 'boleto.svg' | asset_url }}"  style="max-height: 33px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="Boleto" /></div>{% endif %}
+                            {% if settings.show_pix_f %}<div class="payment-icon margin--1"><img data-src="{{ 'pix.svg' | asset_url }}"  style="max-height: 34px;margin-top: 0.1rem;" width="50" height="25" class="fluid-i lazyload" alt="Pix" /></div>{% endif %}
 
 
                         </div>
