--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -282,14 +282,14 @@
                           <div class="payment-list">
                             {% for type in shop.enabled_payment_types %}
                               
-            <img class="cartoes" src="{{ 'Visa.svg' | asset_url }}" alt="Visa">
+            <img class="cartoes" src="{{ 'visa.svg' | asset_url }}" alt="Visa">
             <img class="cartoes" src="{{ 'mastercard.svg' | asset_url }}" alt="Mastercard">
             <img class="cartoes" src="{{ 'hipercard.svg' | asset_url }}" alt="Hipercard">
-         <img class="cartoes" src="{{ 'Elo.svg' | asset_url }}" alt="Elo">
-        <img class="cartoes" src="{{ 'Amex.svg' | asset_url }}" alt="Amex">
-           <img class="cartoes" src="{{ 'Discover.svg' | asset_url }}" alt="Discover">
-          <img class="cartoes" src="{{ 'Pix.svg' | asset_url }}" alt="Pix">
-            <img class="cartoes" src="{{ 'Boleto.svg' | asset_url }}" alt="Pix">
+         <img class="cartoes" src="{{ 'elo.svg' | asset_url }}" alt="Elo">
+        <img class="cartoes" src="{{ 'amex.svg' | asset_url }}" alt="Amex">
+           <img class="cartoes" src="{{ 'discover.svg' | asset_url }}" alt="Discover">
+          <img class="cartoes" src="{{ 'pix.svg' | asset_url }}" alt="Pix">
+            <img class="cartoes" src="{{ 'boleto.svg' | asset_url }}" alt="Pix">
                               
                             {% endfor %}
                           </div>
