--- a/snippets/product-item.liquid
+++ b/snippets/product-item.liquid
@@ -302,14 +302,17 @@
       {%- endif -%}
 
       
-        {% if settings.show_installments and shop.currency == 'BRL' %}
-            {% assign juros = settings.taxa_decima_segunda_parcela | divided_by: 100 | plus: 1 %}
-            <p class="parcelamento" style='font-size:13px; margin-top: 0px; margin-bottom: 10px'>em 12x {% if juros == 1 %} sem juros {%endif%} de <span style="color: black;"><b style="font-size:13px;">{{ product.variants[0].price |times: juros | divided_by: 12 | round:2 | money }} </b></span></p>
-          {% endif %}
-
-          {% if settings.show_pix and shop.currency == 'BRL' %}
-            <div class="parcelamento" style='font-size:13px; margin-top: 0px; margin-bottom: 10px'>
-              {% assign discount = product.variants[0].price | times: settings.desconto_pix | divided_by: 100 %}
+{% assign taxa_12x = settings.juros_parcelamento | divided_by: 100 | plus: 1 %}
+       
+<p style="font-size: 12px;font-weight: 500;margin-top: -8px;margin-bottom: 14px;" >
+  <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="14" height="14" viewBox="0 0 32 32" style="top: 3px;position: relative;">
+    <path d="M 5 6 C 3.355469 6 2 7.355469 2 9 L 2 23 C 2 24.644531 3.355469 26 5 26 L 27 26 C 28.644531 26 30 24.644531 30 23 L 30 9 C 30 7.355469 28.644531 6 27 6 Z M 5 8 L 27 8 C 27.566406 8 28 8.433594 28 9 L 28 11 L 5 11 L 5 13 L 28 13 L 28 23 C 28 23.566406 27.566406 24 27 24 L 5 24 C 4.433594 24 4 23.566406 4 23 L 4 9 C 4 8.433594 4.433594 8 5 8 Z">
+    </path>
+  </svg> ou 12x de <b style="font-size:12px;color: var(--color-parcel-ini);">{{ product.price| divided_by: 12 | times: taxa_12x | money}}</b></p>
+{%- if settings.comprar_produto -%}
+        {% assign random = product.id | divided_by: 220022 | modulo: 4055 %}   
+    <p style="font-size: 11px;margin-top: -16px;margin-bottom: -3px;"> +{{ random }} {{ settings.mostrar_vendidos_text }}</p>
+      {%- else -%}
   
 
       {%- endif -%}
