--- a/snippets/product-variant-selector.liquid
+++ b/snippets/product-variant-selector.liquid
@@ -1,4 +1,3 @@
-
 {%- assign selected_variant = product.selected_or_first_available_variant -%}
 {%- assign color_label = 'color,colour,couleur,cor,kit,colore,farbe,색,色,カラー,färg,farve,szín,barva' | split: ',' -%}
 
@@ -32,7 +31,7 @@
             
         </div>
           
-        {% liquid assign taxa_12x = settings.juros_parcelamento | divided_by: 100 | plus: 1%}
+        {% assign taxa_12x = settings.juros_parcelamento | divided_by: 100 | plus: 1%}
           <p id="juros" style="display:none"> {{ settings.juros_parcelamento | divided_by: 100 | plus: 1 }} </p>
         <p style="font-size:15px;top:-4px;margin-bottom:-5px;position: relative" ><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="18" height="18" viewBox="0 0 32 32" style="top: 4px;position: relative;"><path d="M 5 6 C 3.355469 6 2 7.355469 2 9 L 2 23 C 2 24.644531 3.355469 26 5 26 L 27 26 C 28.644531 26 30 24.644531 30 23 L 30 9 C 30 7.355469 28.644531 6 27 6 Z M 5 8 L 27 8 C 27.566406 8 28 8.433594 28 9 L 28 11 L 5 11 L 5 13 L 28 13 L 28 23 C 28 23.566406 27.566406 24 27 24 L 5 24 C 4.433594 24 4 23.566406 4 23 L 4 9 C 4 8.433594 4.433594 8 5 8 Z"></path></svg> em até 12x de <b style="font-size:15px;color: var(--color-parcel-prod);" id="juros">{{ selected_variant.price| divided_by: 12 | times: taxa_12x | money}}</b></p>
                     
@@ -495,6 +494,3 @@
   {%- endif -%}
   
 </div>
-
- 
- 
